# fujicoin-22.0

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libbaricoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  baricoin.sln  baricoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  baricoin-cli.bash-completion  baricoin-tx.bash-completion  baricoind.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  baricoin-conf.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  signet.md  tor.md  translation_process.md  translation_strings_policy.md  (+1 more)
doc/man/: Makefile.am  baricoin-cli.1  baricoin-qt.1  baricoin-tx.1  baricoin-util.1  baricoin-wallet.1  baricoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  addrdb.h  (+114 more)
(+889 files in other folders)
