dist_man1_MANS=

if BUILD_BARICOIND
  dist_man1_MANS+=baricoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=baricoin-qt.1
endif

if BUILD_BARICOIN_CLI
  dist_man1_MANS+=baricoin-cli.1
endif

if BUILD_BARICOIN_TX
  dist_man1_MANS+=baricoin-tx.1
endif

if BUILD_BARICOIN_UTIL
  dist_man1_MANS+=baricoin-util.1
endif

if ENABLE_WALLET
if BUILD_BARICOIN_WALLET
  dist_man1_MANS+=baricoin-wallet.1
endif
endif
